# tm4c

./: .gdbconfig  .gdbinit  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config
.github/workflows/: ci.yml
benches/: speed.rs
bins/: clock.rs
examples/: serial.rs
src/: generic_gpio.rs  lib.rs  main.rs  tm4c_clock.rs  tm4c_gpio.rs
tests/: smoke.rs
xtask/: Cargo.toml  xtask.rs
