[workspace]
members = [
    ".",
    "xtask",
]

[package]
name = "utp-tm4c"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2021"

# TODO: CI
# TODO: README
# TODO: MSRV
# TODO: CHANGELOG
# TODO: all the other keys
# TODO: lints and attributes for this crate

[dependencies]
cortex-m-rt = { version = "0.6.15", features = ["device"] }
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

# TODO: All of the below should use crates.io published version instead of git repos.
lc3-device-support = { git = "https://github.com/ut-utp/prototype.git", version = "0.1.0", default-features = false, features = ["no_std"] }
lc3-baseline-sim = { git = "https://github.com/ut-utp/prototype.git", version = "0.1.0", default-features = false, features = ["no_std"] }
lc3-isa = { git = "https://github.com/ut-utp/prototype.git", version = "0.1.0", default-features = false, features = ["no_std"] }
lc3-traits = { git = "https://github.com/ut-utp/prototype.git", version = "0.1.0", default-features = false, features = ["no_std"]  }

# tm4c123x-hal = { version = "0.9.0", features = ["rt"] }
tm4c123x-hal = { git = "https://github.com/ut-utp/tm4c-hal", version= "0.10.0" , features=["rt"], rev="f4f7487202c7b777c6d2092cd6504f8d4c638ede" }
tm4c123x = "0.9.0"
embedded-hal = "0.2.7"

lc3-tm4c = { git = "https://github.com/ut-utp/tm4c", branch = "feat-non-generic-may-2020-snapshot" }

[profile.dev]
lto = true
opt-level = 1 # need this so we fit in flash!

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# opt-level = "s"


[profile.dev] # and also `profile.test`
opt-level = 1 # need this so we fit in flash!
debug = true
lto = "thin"
overflow-checks = true
debug-assertions = true
incremental = true

[profile.release] # and also `profile.bench`
opt-level = 3 # or "z"
debug = true
lto = "fat"
overflow-checks = false
debug-assertions = false
incremental = false
codegen-units = 1
