[workspace]
members = [
    ".",
    "xtask",
]
default-members = ["."]

[package]
name = "utp-tm4c"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2021"
rust-version = "1.62.0"
default-run = "utp-tm4c"

[lib]
bench = false
test = false

[[bin]]
name = "utp-tm4c"
harness = false
test = false
bench = false

[[bin]]
name = "clock"
path = "bins/clock.rs"
harness = false
test = false
bench = false

[[bench]]
name = "speed"
harness = false
test = true
bench = true

[[test]]
name = "smoke"
harness = false
test = true
bench = false

[[example]]
name = "serial"
harness = false
test = false
bench = false

# TODO: CI
# TODO: README
# TODO: MSRV
# TODO: CHANGELOG
# TODO: all the other keys
# TODO: lints and attributes for this crate

[dependencies]
cortex-m-rt = { version = "0.6.15", features = ["device"] }
cortex-m-semihosting = "0.5.0"
panic-write = { git = "https://github.com/rrbutani/panic-write.git" } # TODO: replace with crates.io
# panic-write = { path = "../panic-write" } # TODO: replace with crates.io

# TODO: All of the below should use crates.io published version instead of git repos.
lc3-device-support = { git = "https://github.com/ut-utp/prototype.git", version = "0.1.0", default-features = false }
lc3-baseline-sim = { git = "https://github.com/ut-utp/prototype.git", version = "0.1.0", default-features = false }
lc3-isa = { git = "https://github.com/ut-utp/prototype.git", version = "0.1.0", default-features = false }
lc3-traits = { git = "https://github.com/ut-utp/prototype.git", version = "0.1.0", default-features = false  }

tm4c123x-hal = { git = "https://github.com/ut-utp/tm4c-hal", branch = "utp-patches" , features=["rt"] }
tm4c123x = "0.9.0"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
pin-utils = "0.1"
nb = "1"

# TODO: expose log levels here!

paste = "1" # For `generic_gpio`, remove once that moves over!

[dev-dependencies]
ubench = { version = "0.1", git = "https://github.com/rrbutani/ubench", features = ["cortex-m"] } # TODO: replace with `crates.io`

[profile.dev] # and also `profile.test`
opt-level = 1 # need this so we fit in flash!
debug = true
lto = "thin"
overflow-checks = true
debug-assertions = true
incremental = true

[profile.release] # and also `profile.bench`
opt-level = 3 # or "z"
debug = true
lto = "fat"
overflow-checks = false
debug-assertions = false
incremental = false
codegen-units = 1

[patch."https://github.com/ut-utp/prototype.git"]
lc3-isa =            { path = "../core/isa", version = "0.1.0" }
lc3-traits =         { path = "../core/traits", version = "0.1.0" }
lc3-baseline-sim =   { path = "../core/baseline-sim", version = "0.1.0" }
lc3-device-support = { path = "../core/device-support", version = "0.1.0" }
